--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head></head>
+    <head>
+        <title>Ivan Luu</title>
+    </head>
     <body>
-    <h1></h1>
+    <h1>Ivan Luu</h1>
     <p></p>
     </body>
 </html>
