Update index file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Ivan Luu</title>
+        <link rel="stylesheet" href="dummy.css">
     </head>
     <body>
     <h1>Ivan Luu</h1>
