Update index file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
         <title>Ivan Luu</title>
         <link rel="stylesheet" href="dummy.css">
     </head>
-    <body>
-    <h1>Ivan Luu</h1>
-    <p></p>
-    </body>
+        <header>
+            <h1>Ivan Luu</h1>
+        </header>
+        <body>
+            <main>
+                <h1>About Me</h1>
+            </main>
+            <p></p>
+        </body>
+    
 </html>
