--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <body>
             <main>
                 <h1>About Me</h1>
+
+                <h2>Who I am</h2>
+
+                <h2>Where I'm From</h2>
+
+                <h2>What I Do</h2>
             </main>
             <p></p>
         </body>
