--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <body>
             <main>
                 <h1>About Me</h1>
-
-                <h2>Who I am</h2>
-
-                <h2>Where I'm From</h2>
-
-                <h2>What I Do</h2>
+                <section>
+                    <h2>Who I am</h2>
+                </section>
+                <section>
+                    <h2>Where I'm From</h2>
+                </section>
+                <section>
+                    <h2>What I Do</h2>
+                </section>
+                    <h3>Favorites</h3>
             </main>
             <p></p>
         </body>
