Update index file

--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
         <header>
             <h1>Ivan Luu</h1>
         </header>
-        <body>
-            <main>
-                <h1>About Me</h1>
-                <section>
-                    <h2>Who I am</h2>
-                </section>
-                <section>
-                    <h2>Where I'm From</h2>
-                </section>
-                <section>
-                    <h2>What I Do</h2>
-                </section>
-                    <h3>Favorites</h3>
-            </main>
-            <p></p>
-        </body>
-    
+        <nav>
+            <ul>
+                <li><a href="#who">Who</a></li>
+                <li><a href="#where">Where</a></li>
+                <li><a href="#what">What</a></li>
+            </ul>
+        </nav>
+        <main>
+            <h1>About Me</h1>
+            <section id="who">
+                <h2>Who I am</h2>
+            </section>
+            <section id="where">
+                <h2>Where I'm From</h2>
+            </section>
+            <section id="what">
+                <h2>What I Do</h2>
+                <h3>Work</h3>
+                <h3>Hobbies</h3>
+            </section>
+        </main>
+        <body></body>
 </html>
