Update index file

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
         <title>Ivan Luu</title>
         <link rel="stylesheet" href="dummy.css">
     </head>
-        <header>
+        <header id="name">
             <h1>Ivan Luu</h1>
         </header>
         <nav>
             <ul>
                 <li><a href="#who">Who</a></li>
-                <li><a href="#where">Where</a></li>
                 <li><a href="#what">What</a></li>
+                <li><a href="#where">Where</a></li>
             </ul>
         </nav>
         <main>
@@ -20,14 +20,16 @@
             <section id="who">
                 <h2>Who I am</h2>
             </section>
-            <section id="where">
-                <h2>Where I'm From</h2>
-            </section>
             <section id="what">
                 <h2>What I Do</h2>
                 <h3>Work</h3>
                 <h3>Hobbies</h3>
             </section>
+            <section id="where">
+                <h2>Where I'm From</h2>
+
+            </section>
         </main>
         <body></body>
+        <footer><a href="#name">Back to top</a></footer>
 </html>
