--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <section id="who">
                 <h2>Who I am</h2>
             </section>
+            <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <section id="what">
                 <h2>What I Do</h2>
                 <h3>Work</h3>
