Update index file

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <section id="who">
                 <h2>Who I am</h2>
             </section>
-            <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <section id="what">
                 <h2>What I Do</h2>
                 <h3>Work</h3>
@@ -28,9 +27,14 @@
             </section>
             <section id="where">
                 <h2>Where I'm From</h2>
-
             </section>
         </main>
-        <body></body>
+        <body>
+            <h2>Favorites</h2>
+            <div>
+                <b>Food:</b> Lamb<br>
+                <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
+            </div>
+        </body>
         <footer><a href="#name">Back to top</a></footer>
 </html>
