--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1>About Me</h1>
             <section id="who">
                 <h2>Who I am</h2>
+                <p>I’m a <strong>Computer Science student</strong> at UCSD.</p>
             </section>
             <section id="what">
                 <h2>What I Do</h2>
@@ -27,12 +28,14 @@
             </section>
             <section id="where">
                 <h2>Where I'm From</h2>
+                <p>I was born and raised in <strong>Los Angeles, California</strong>.</p>s
             </section>
         </main>
         <body>
             <h2>Favorites</h2>
             <div>
                 <b>Food:</b> Lamb<br>
+                <
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             </div>
         </body>
