Update index file

--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
             </section>
             <section id="where">
                 <h2>Where I'm From</h2>
-                <p>I was born and raised in <strong>Los Angeles, California</strong>.</p>s
+                <p>I was born and raised in <strong>Los Angeles, California</strong>.</p>
             </section>
         </main>
         <body>
             <h2>Favorites</h2>
             <div>
-                <b>Food:</b> Lamb<br>
-                <
+                <b>Food:</b> lamb chops<br>
+                <b>Song:</b>
+                    <audio controls>
+                        <source src="https://www.youtube.com/watch?v=dGeskTvIwxQ">
+                    </audio>
+                <b>Movie:</b>
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             </div>
         </body>
