Update index file

--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
             <div>
                 <b>Food:</b> lamb chops<br>
                 <b>Song:</b>
-                    <audio controls>
-                        <source src="https://www.youtube.com/watch?v=dGeskTvIwxQ">
-                    </audio>
+                    <audio controls src="https://www.youtube.com/watch?v=dGeskTvIwxQ"></audio>
                 <b>Movie:</b>
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             </div>
