Update index file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2>Favorites</h2>
             <div>
                 <b>Food:</b> lamb chops<br>
-                <b>Song:</b>
+                <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls src="https://www.youtube.com/watch?v=dGeskTvIwxQ"></audio>
                 <b>Movie:</b>
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
