Update index file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
                 <b>Food:</b> lamb chops<br>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls src="https://www.youtube.com/watch?v=dGeskTvIwxQ"></audio>
-                <b>Movie:</b>
+                <b>Movie:</b> The Grand Budapest Hotel<br>
+                <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
+
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             </div>
         </body>
