--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <div>
                 <b>Food:</b> lamb chops<br>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
-                    <audio controls src="/RL Grime - Shrine ft. Freya Ridings.mp3"></audio><br>
+                    <audio controls>
+                        <source src="RL Grime - Shrine ft. Freya Ridings.mp3" type="audio.mpeg">
+                    </audio><br>
                 <b>Movie:</b> The Grand Budapest Hotel<br>
                 <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
 
