Update index file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
                 <b>Food:</b> lamb chops<br>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls>
-                        <source src="RL Grime - Shrine ft. Freya Ridings.mp3" type="audio.mpeg">
+                        <source src="shrine.mp3" type="audio.mpeg">
+                        Your browser does not support the audio element.
                     </audio><br>
                 <b>Movie:</b> The Grand Budapest Hotel<br>
                 <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
