Update index file

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
                         Your browser does not support the audio element.
                     </audio><br>
                 <b>Movie:</b> The Grand Budapest Hotel<br>
-                <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
-
+                <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
                 <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             </div>
         </body>
