--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div>
                 <b>Food:</b> lamb chops<br>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
-                    <audio controls>
+                    <audio controls controlsList="nodownload">
                         <source src="shrine.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio><br>
