Update index file

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
         <body>
             <h2>Favorites</h2>
             <div>
-                <b>Food:</b> lamb chops<br>
-                <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
+                <pre>
+                <b>Food:</b> lamb chops
+                <b>Animal:</b> <i>Oryctolagus cuniculus</i>
+                <b>Song:</b> RL Grime - Shrine ft. Freya Ridings
                     <audio controls controlsList="nodownload">
                         <source src="shrine.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
-                    </audio><br>
-                <b>Movie:</b> The Grand Budapest Hotel<br>
-                <b>Programming Language:</b> Java because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
-                <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
+                    </audio>
+                <b>Movie:</b> The Grand Budapest Hotel
+
+                <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
+                </pre>
+                <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside><br>
             </div>
         </body>
         <footer><a href="#name">Back to top</a></footer>
