Update index file

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             </section>
             <section id="what">
                 <h2>What I Do</h2>
+
                 <h3>Work</h3>
+                    <p>Graphic designer for a Twitch streamer.</p>
                 <h3>Hobbies</h3>
             </section>
             <section id="where">
@@ -34,19 +36,32 @@
         <body>
             <h2>Favorites</h2>
             <div>
-                <pre>
-                <b>Food:</b> lamb chops
-                <b>Animal:</b> <i>Oryctolagus cuniculus</i>
-                <b>Song:</b> RL Grime - Shrine ft. Freya Ridings
+                <b>Food:</b> lamb chops<br>
+                <b>Animal:</b> <i>Oryctolagus cuniculus</i><br>
+                <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls controlsList="nodownload">
                         <source src="shrine.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
-                    </audio>
-                <b>Movie:</b> The Grand Budapest Hotel
-
-                <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.
+                    </audio><br><br>
+                <b>Movie:</b> The Grand Budapest Hotel<br>
+                <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
+                <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
+<pre>
+⢀⣠⣾⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⠀⣠⣤⣶⣶
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠀⠀⠀⢰⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣧⣀⣀⣾⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⡏⠉⠛⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⡿⣿
+⣿⣿⣿⣿⣿⣿⠀⠀⠀⠈⠛⢿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⠿⠛⠉⠁⠀⣿
+⣿⣿⣿⣿⣿⣿⣧⡀⠀⠀⠀⠀⠙⠿⠿⠿⠻⠿⠿⠟⠿⠛⠉⠀⠀⠀⠀⠀⣸⣿
+⣿⣿⣿⣿⣿⣿⣿⣷⣄⠀⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣴⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⠏⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠠⣴⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡟⠀⠀⢰⣹⡆⠀⠀⠀⠀⠀⠀⣭⣷⠀⠀⠀⠸⣿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠈⠉⠀⠀⠤⠄⠀⠀⠀⠉⠁⠀⠀⠀⠀⢿⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⢾⣿⣷⠀⠀⠀⠀⡠⠤⢄⠀⠀⠀⠠⣿⣿⣷⠀⢸⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⡀⠉⠀⠀⠀⠀⠀⢄⠀⢀⠀⠀⠀⠀⠉⠉⠁⠀⠀⣿⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿
+⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿
                 </pre>
-                <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside><br>
             </div>
         </body>
         <footer><a href="#name">Back to top</a></footer>
