Update index file

--- a/index.html
+++ b/index.html
@@ -37,7 +37,12 @@
             <h2>Favorites</h2>
             <div>
                 <b>Food:</b> lamb chops<br>
-                <b>Animal:</b> <i>Oryctolagus cuniculus</i><br>
+                <b>Animal:</b> <i>Rabbits</i><br>
+                <figure>
+                    <img src="Images/whiteRabbit.jpg"
+                         alt="Mini Lop Rabbit">
+                    <figcaption>Oryctolagus cuniculus</figcaption>
+                </figure>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls controlsList="nodownload">
                         <source src="shrine.mp3" type="audio/mpeg">
