Update index file

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
             <h2>Favorites</h2>
             <div>
                 <b>Food:</b> lamb chops<br>
-                <b>Animal:</b> <i>Rabbits</i><br>
+                <b>Animal:</b> Rabbits<br>
                 <figure>
-                    <img src="Images/whiteRabbit.jpg"
-                         alt="Mini Lop Rabbit">
-                    <figcaption>Oryctolagus cuniculus</figcaption>
+                    <img src="Images/whiteRabbit.jpg" alt="Mini Lop Rabbit">
+                    <figcaption><i>Oryctolagus cuniculus</i></figcaption>
                 </figure>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
                     <audio controls controlsList="nodownload">
