--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <figcaption><i>Oryctolagus cuniculus</i></figcaption>
                 </figure>
                 <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
-                    <audio controls controlsList="nodownload">
+                    <audio controls>
                         <source src="shrine.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio><br><br>
