--- a/index.html
+++ b/index.html
@@ -46,7 +46,12 @@
                     <source src="shrine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio><br><br>
-            <b>Movie:</b> The Grand Budapest Hotel<br>
+            <b>Movies:</b> 
+            <ol>
+                <li>The Grand Budapest Hotel</li>
+                <li>Drive</li>
+                <li>Blade Runner 2049</li>
+            </ol>    
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
             <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <pre>
