--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="Images/whiteRabbit.jpg" alt="Mini Lop Rabbit">
                 <figcaption><i>Oryctolagus cuniculus</i></figcaption>
             </figure>
-            <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br>
+            <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br><br>
                 <audio controls>
                     <source src="shrine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
