Update index file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
             <h1>Ivan Luu</h1>
         </header>
         <nav>
-            <ul>
-                <li><a href="#who">Who</a></li>
-                <li><a href="#what">What</a></li>
-                <li><a href="#where">Where</a></li>
-            </ul>
+            <a href="#who">Who</a><br>
+            <a href="#what">What</a><br>
+            <a href="#where">Where</a><br>
         </nav>
         <main>
             <h1>About Me</h1>
