Update index file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <h3>Work</h3>
                     <p>Graphic designer for a Twitch streamer.</p>
                 <h3>Hobbies</h3>
+                <ul>
+                    <li>PC gaming</li>
+                    <li>Cardistry</li>
+                    <li>Table Tennis</li>
+                </ul>
             </section>
             <section id="where">
                 <h2>Where I'm From</h2>
