Update index file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </main>
         <h2>Favorites</h2>
         <div>
-            <b>Food:</b> lamb chops<br>
+            <b>Food:</b> <span>lamb chops</span><br>
             <b>Animal:</b> Rabbits<br>
             <figure>
                 <img src="Images/whiteRabbit.jpg" alt="Mini Lop Rabbit">
