--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <section id="where">
                 <h2>Where I'm From</h2>
                 <p>I was born and raised in <strong>Los Angeles, California</strong>.</p>
+                <iframe src="https://www.google.com/maps/place/Los+Angeles,+CA/@34.0201613,-118.6919205,10z/data=!3m1!4b1!4m5!3m4!1s0x80c2c75ddc27da13:0xe22fdf6f254608f4!8m2!3d34.0522342!4d-118.2436849"></iframe><br>
             </section>
         </main>
         <h2>Favorites</h2>
@@ -55,9 +56,6 @@
                 <li>Drive</li>
                 <li>Blade Runner 2049</li>
             </ol>
-            <iframe>
-
-            </iframe>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
             <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <pre>
