--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <section id="where">
                 <h2>Where I'm From</h2>
                 <p>I was born and raised in <strong>Los Angeles, California</strong>.</p>
-                <iframe src="https://www.google.com/maps/place/Los+Angeles,+CA/@34.0201613,-118.6919205,10z/data=!3m1!4b1!4m5!3m4!1s0x80c2c75ddc27da13:0xe22fdf6f254608f4!8m2!3d34.0522342!4d-118.2436849"></iframe><br>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d423286.27405770525!2d-118.69192047471653!3d34.02016130653294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c75ddc27da13%3A0xe22fdf6f254608f4!2sLos%20Angeles%2C%20CA!5e0!3m2!1sen!2sus!4v1610765745469!5m2!1sen!2sus"></iframe>
             </section>
         </main>
         <h2>Favorites</h2>
