Update index file

--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
             </figure>
             <b>Song:</b> RL Grime - Shrine ft. Freya Ridings<br><br>
                 <audio controls>
-                    <source src="shrine.mp3" type="audio/mpeg">
+                    <source src="Media/shrine.mp3" type="audio/mpeg">
                     Your browser does not support the audio element.
                 </audio><br><br>
             <b>Movies:</b> 
             <ol>
+                <li>Blade Runner 2049</li>
                 <li>The Grand Budapest Hotel</li>
                 <li>Drive</li>
-                <li>Blade Runner 2049</li>
             </ol>
+            <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
             <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <pre>
