Update index file

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <li>The Grand Budapest Hotel</li>
                 <li>Drive</li>
             </ol>
-            <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video>
+            <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
             <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
             <pre>
