Update index file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="#who">Who</a><br>
             <a href="#what">What</a><br>
             <a href="#where">Where</a><br>
+            <a href="#schedule">Schedule</a><br>
         </nav>
         <main>
             <h1>About Me</h1>
@@ -58,8 +59,34 @@
             </ol>
             <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
-            <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
-            <pre>
+        </div>
+        <h2 id="schedule">Schedule</h2>
+        <table>
+            <tr>
+                <th></th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+            </tr>
+            <tr>
+                <td>8:00AM</td>
+                <td></td>
+                <td>PSYC 161</td>
+                <td></td>
+                <td>PSYC 161</td>
+            </tr>
+            <tr>
+                <td>9:30AM</td>
+                <td></td>
+                <td>CSE 30</td>
+                <td></td>
+                <td>CSE 30</td>
+            </tr>
+        </table><br>
+        <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
+        <pre>
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
@@ -75,7 +102,7 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿
             </pre>
-        </div>
+        
         <footer><a href="#name">Back to top</a></footer>
     </body>
 </html>
