Update index file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
         </div>
-        <h2 id="schedule">Schedule</h2>
+        <h2 id="schedule">Lecture Schedule</h2>
         <table>
             <tr>
                 <th></th>
@@ -71,18 +71,36 @@
                 <th>Friday</th>
             </tr>
             <tr>
-                <td>8:00AM</td>
+                <td>08:00AM</td>
                 <td></td>
                 <td>PSYC 161</td>
                 <td></td>
                 <td>PSYC 161</td>
+                <td></td>
             </tr>
             <tr>
-                <td>9:30AM</td>
+                <td>09:30AM</td>
                 <td></td>
                 <td>CSE 30</td>
                 <td></td>
                 <td>CSE 30</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>10:00AM</td>
+                <td>CSE 110</td>
+                <td>CSE 30</td>
+                <td>CSE 110</td>
+                <td>CSE 30</td>
+                <td>CSE 110</td>
+            </tr>
+            <tr>
+                <td>11:00AM</td>
+                <td>COGS 1</td>
+                <td></td>
+                <td>COGS 1</td>
+                <td></td>
+                <td>COGS 1</td>
             </tr>
         </table><br>
         <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
