--- a/index.html
+++ b/index.html
@@ -60,8 +60,9 @@
             <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
         </div>
-        <h2 id="schedule">Lecture Schedule</h2>
+        <h2 id="schedule">Schedule</h2>
         <table>
+            <caption>Lectures</caption>
             <tr>
                 <th></th>
                 <th>Monday</th>
