Update index file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
         </div>
         <h2 id="schedule">Schedule</h2>
         <table>
-            <caption>Lectures</caption>
+            <colgroup>
+                <col>
+            </colgroup>
+            <caption>Lecture Days and Times</caption>
             <tr>
                 <th></th>
                 <th>Monday</th>
