Update index file

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <h2 id="schedule">Schedule</h2>
         <table>
             <caption>Lecture Days and Times</caption>
+            <colgroup>
+                <col>
+                <col span="5"> 
+            </colgroup>
             <tr>
                 <th></th>
                 <th>Monday</th>
