Update index file

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <a href="#what">What</a><br>
             <a href="#where">Where</a><br>
             <a href="#schedule">Schedule</a><br>
+            <a href="#contact">Schedule</a><br>
         </nav>
         <main>
             <h1>About Me</h1>
@@ -124,8 +125,17 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⡀⠉⠀⠀⠀⠀⠀⢄⠀⢀⠀⠀⠀⠀⠉⠉⠁⠀⠀⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿
-            </pre>
-        
+        </pre><br>
+        <h2 id="contact">Contact</h2>
+        <form>
+            <label for="msg">Message</label><br>
+            <textarea placeholder="Type your message here."></textarea><br>
+            <label for="fname">First name:</label><br>
+            <input type="text" name="fname" value="John"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text" id="lname" name="lname" value="Doe"><br><br>
+            <input type="submit" value="Submit">
+        </form><br>     
         <footer><a href="#name">Back to top</a></footer>
     </body>
 </html>
