--- a/index.html
+++ b/index.html
@@ -126,15 +126,17 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿
         </pre><br>
-        <h2 id="contact">Contact</h2>
+        <h2 id="contact">About you</h2>
         <form>
+            <label for="fname">First name:</label><br>
+            <input type="text"><br>
+            <label for="lname">Last name:</label><br>
+            <input type="text"><br><br>
+            <input type="submit" value="Submit">
+            <label for="color">Favorite color</label><br>
+            <input type="color" value="Submit">
             <label for="msg">Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
-            <label for="fname">First name:</label><br>
-            <input type="text" name="fname" value="John"><br>
-            <label for="lname">Last name:</label><br>
-            <input type="text" id="lname" name="lname" value="Doe"><br><br>
-            <input type="submit" value="Submit">
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
     </body>
