Update index file

--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
         </pre><br>
         <h2 id="contact">About you</h2>
         <form>
-            <label for="fname">First name:</label><br>
+            <label>First name:</label><br>
             <input type="text"><br>
-            <label for="lname">Last name:</label><br>
+            <label>Last name:</label><br>
             <input type="text"><br><br>
-            <input type="submit" value="Submit">
-            <label for="color">Favorite color</label><br>
-            <input type="color" value="Submit">
-            <label for="msg">Message</label><br>
+            <label>Favorite color</label><br>
+            <input type="color"><br>
+            <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
+            <input type="submit" value="Submit"><br>
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
     </body>
