Update index file

--- a/index.html
+++ b/index.html
@@ -130,12 +130,16 @@
         <form>
             <label>First name:</label><br>
             <input type="text"><br>
+
             <label>Last name:</label><br>
-            <input type="text"><br><br>
+            <input type="text"><br>
+
             <label>Favorite color</label><br>
             <input type="color"><br>
+
             <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
+            
             <input type="submit" value="Submit"><br>
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
