--- a/index.html
+++ b/index.html
@@ -125,21 +125,33 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⡀⠉⠀⠀⠀⠀⠀⢄⠀⢀⠀⠀⠀⠀⠉⠉⠁⠀⠀⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿
-        </pre><br>
+        </pre>
         <h2 id="contact">About you</h2>
         <form>
-            <label>First name:</label><br>
+            <label>First Name:</label><br>
             <input type="text"><br>
 
-            <label>Last name:</label><br>
+            <label>Last Name:</label><br>
             <input type="text"><br>
 
-            <label>Favorite color</label><br>
+            <label>Phone Number:</label><br>
+            <input type="tel"><br>
+
+            <label>Email:</label><br>
+            <input type="email"><br>
+
+            <label>Birthday:</label><br>
+            <input type="date"><br>
+
+            <label>Favorite Color</label><br>
             <input type="color"><br>
+
+            <label>Favorite Song</label><br>
+            <input type="url"><br>
 
             <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
-            
+
             <input type="submit" value="Submit"><br>
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
