--- a/index.html
+++ b/index.html
@@ -129,30 +129,42 @@
         <h2 id="contact">About you</h2>
         <form>
             <label>First Name:</label><br>
-            <input type="text"><br>
+            <input type="text"><br><br>
 
             <label>Last Name:</label><br>
-            <input type="text"><br>
+            <input type="text"><br><br>
 
             <label>Phone Number:</label><br>
-            <input type="tel"><br>
+            <input type="tel"><br><br>
 
             <label>Email:</label><br>
-            <input type="email"><br>
+            <input type="email"><br><br>
 
             <label>Birthday:</label><br>
-            <input type="date"><br>
+            <input type="date"><br><br>
 
             <label>Favorite Color</label><br>
-            <input type="color"><br>
+            <input type="color"><br><br>
 
             <label>Favorite Song</label><br>
-            <input type="url"><br>
+            <input type="url"><br><br>
+
+            <label>Favorite Seasons</label><br>
+            <input type="checkbox">
+            <label for="Spring">Spring</label><br>
+            <input type="checkbox">
+            <label for="Summer">Summer</label><br>
+            <input type="checkbox">
+            <label for="Fall">Fall</label><br>
+            <input type="checkbox">
+            <label for="Winter">Winter</label><br><br>
 
             <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
 
-            <input type="submit" value="Submit"><br>
+            <input type="reset">
+
+            <input type="submit"><br>
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
     </body>
