Update index file

--- a/index.html
+++ b/index.html
@@ -159,6 +159,14 @@
             <input type="checkbox">
             <label for="Winter">Winter</label><br><br>
 
+            <label>Favorite Meal of the Day</label><br>
+            <input type="radio">
+            <label for="Summer">Breakfast</label><br>
+            <input type="radio">
+            <label for="Fall">Lunch</label><br>
+            <input type="Radio">
+            <label for="Winter">Dinner</label><br><br>
+
             <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
 
