Update index file

--- a/index.html
+++ b/index.html
@@ -151,21 +151,21 @@
 
             <label>Favorite Seasons</label><br>
             <input type="checkbox">
-            <label for="Spring">Spring</label><br>
+            <label>Spring</label><br>
             <input type="checkbox">
-            <label for="Summer">Summer</label><br>
+            <label>Summer</label><br>
             <input type="checkbox">
-            <label for="Fall">Fall</label><br>
+            <label>Fall</label><br>
             <input type="checkbox">
-            <label for="Winter">Winter</label><br><br>
+            <label>Winter</label><br><br>
 
             <label>Favorite Meal of the Day</label><br>
             <input type="radio">
-            <label for="Summer">Breakfast</label><br>
+            <label>Breakfast</label><br>
             <input type="radio">
-            <label for="Fall">Lunch</label><br>
+            <label>Lunch</label><br>
             <input type="Radio">
-            <label for="Winter">Dinner</label><br><br>
+            <label>Dinner</label><br><br>
 
             <label>Message</label><br>
             <textarea placeholder="Type your message here."></textarea><br>
