Update index file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#what">What</a><br>
             <a href="#where">Where</a><br>
             <a href="#schedule">Schedule</a><br>
-            <a href="#contact">Schedule</a><br>
+            <a href="#misc">Misc</a><br>
         </nav>
         <main>
             <h1>About Me</h1>
@@ -109,6 +109,7 @@
                 <td>COGS 1</td>
             </tr>
         </table><br>
+        <h2 id="misc">Misc</h2>
         <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
         <pre>
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
