Update index file

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             <h1>Ivan Luu</h1>
         </header>
         <nav>
-            <a href="#who">Who</a><br>
-            <a href="#what">What</a><br>
-            <a href="#where">Where</a><br>
-            <a href="#schedule">Schedule</a><br>
-            <a href="#misc">Misc</a><br>
+            <a href="#who">Who</a>
+            <a href="#what">What</a>
+            <a href="#where">Where</a>
+            <a href="#schedule">Schedule</a>
+            <a href="#misc">Misc</a>
         </nav>
         <main>
             <h1>About Me</h1>
