Update index file

--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
 ⣿⣿⣿⣿⣿⣿⣿⣿⣧⠀⠀⠀⠀⠀⠀⠀⠈⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢹⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⠃⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢸⣿⣿⣿⣿⣿
         </pre>
+
+        <canvas width="100" height="100">Your browser does not support the canvas tag.</canvas>
+        <svg width="100" height="100">
+            <rect width="100" height="100">
+          </svg>
         <h2 id="contact">About you</h2>
         <form>
             <label>First Name:</label><br>
