Update index file

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <section id="what">
                 <h2>What I Do</h2>
                 <h3>Work</h3>
-                    <p>Graphic designer for a Twitch streamer.</p>
+                <details>
+                    <summary>Graphic Design</summary>
+                    <p>I create overlays, logos, and other graphical content for a Twitch Streamer</p>
+                  </details>
                 <h3>Hobbies</h3>
                 <ul>
                     <li>PC gaming</li>
@@ -131,7 +134,11 @@
         <canvas width="100" height="100">Your browser does not support the canvas tag.</canvas>
         <svg width="100" height="100">
             <rect width="100" height="100">
-          </svg>
+        </svg><br>
+        <button type="button">Click here for absolutely nothing!</button>
+        <template>
+            <h2>Hidden Content</h2>
+        </template>
         <h2 id="contact">About you</h2>
         <form>
             <label>First Name:</label><br>
