--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
         <canvas width="100" height="100">Your browser does not support the canvas tag.</canvas>
         <svg width="100" height="100">
-            <rect width="100" height="100">
+            <rect width="100" height="100"></rect>
         </svg><br>
         <button type="button">Click here for absolutely nothing!</button>
         <template>
