Update index file

--- a/index.html
+++ b/index.html
@@ -141,51 +141,49 @@
         </template>
         <h2 id="contact">About you</h2>
         <form>
-            <label>First Name:</label><br>
-            <input type="text"><br><br>
+            <fieldset>
+                <legend>Info</legend>
+                <label>First Name:</label><br>
+                <input type="text"><br><br>
+                <label>Last Name:</label><br>
+                <input type="text"><br><br>
+                <label>Phone Number:</label><br>
+                <input type="tel"><br><br>
+                <label>Email:</label><br>
+                <input type="email"><br><br>              
+                <label>Birthday:</label><br>
+                <input type="date"><br><br>
+            </fieldset>
+            <fieldset>
+                <legend>Misc</legend>
+                <label>Favorite Color</label><br>
+                <input type="color"><br><br>
+                <label>Favorite Song</label><br>
+                <input type="url"><br><br>
 
-            <label>Last Name:</label><br>
-            <input type="text"><br><br>
+                <label>Favorite Seasons</label><br>
+                <input type="checkbox">
+                <label>Spring</label><br>
+                <input type="checkbox">
+                <label>Summer</label><br>
+                <input type="checkbox">
+                <label>Fall</label><br>
+                <input type="checkbox">
+                <label>Winter</label><br><br>
 
-            <label>Phone Number:</label><br>
-            <input type="tel"><br><br>
+                <label>Favorite Meal of the Day</label><br>
+                <input type="radio">
+                <label>Breakfast</label><br>
+                <input type="radio">
+                <label>Lunch</label><br>
+                <input type="Radio">
+                <label>Dinner</label><br><br>
 
-            <label>Email:</label><br>
-            <input type="email"><br><br>
-
-            <label>Birthday:</label><br>
-            <input type="date"><br><br>
-
-            <label>Favorite Color</label><br>
-            <input type="color"><br><br>
-
-            <label>Favorite Song</label><br>
-            <input type="url"><br><br>
-
-            <label>Favorite Seasons</label><br>
-            <input type="checkbox">
-            <label>Spring</label><br>
-            <input type="checkbox">
-            <label>Summer</label><br>
-            <input type="checkbox">
-            <label>Fall</label><br>
-            <input type="checkbox">
-            <label>Winter</label><br><br>
-
-            <label>Favorite Meal of the Day</label><br>
-            <input type="radio">
-            <label>Breakfast</label><br>
-            <input type="radio">
-            <label>Lunch</label><br>
-            <input type="Radio">
-            <label>Dinner</label><br><br>
-
-            <label>Message</label><br>
-            <textarea placeholder="Type your message here."></textarea><br>
-
-            <input type="reset">
-
-            <input type="submit"><br>
+                <label>Message</label><br>
+                <textarea placeholder="Type your message here."></textarea><br>
+                <input type="reset">
+                <input type="submit"><br>
+            </fieldset>
         </form><br>     
         <footer><a href="#name">Back to top</a></footer>
     </body>
