Update index file

--- a/index.html
+++ b/index.html
@@ -179,6 +179,20 @@
                 <input type="Radio">
                 <label>Dinner</label><br><br>
 
+                <label>Choose a Star Wars character:</label><br>
+                <select>
+                <optgroup label="Light">
+                    <option>Luke Skywalker</option>
+                    <option>Han Solo</option>
+                    <option>Princess Leia</option>
+                </optgroup>
+                <optgroup label="Dark">
+                    <option>Darth Vader</option>
+                    <option>Darth Maul</option>
+                    <option>Emperor Palpatine</option>
+                </optgroup>
+                </select><br><br>
+
                 <label>Message</label><br>
                 <textarea placeholder="Type your message here."></textarea><br>
                 <input type="reset">
