Update index file

--- a/index.html
+++ b/index.html
@@ -193,6 +193,14 @@
                 </optgroup>
                 </select><br><br>
 
+                <label>Soup or Salad?</label>
+                <input list="food">
+                <datalist id="food">
+                    <option value="Soup">
+                    <option value="Salad">
+                    <option value="What's a super salad?"></option>
+                </datalist><br><br>
+
                 <label>Message</label><br>
                 <textarea placeholder="Type your message here."></textarea><br>
                 <input type="reset">
