Update index file

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 </optgroup>
                 </select><br><br>
 
-                <label>Soup or Salad?</label>
+                <label>Soup or Salad?</label><br>
                 <input list="food">
                 <datalist id="food">
                     <option value="Soup">
