Update index file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="dummy.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Ivan Luu</title>
     </head>
     <body>
@@ -45,6 +47,7 @@
         <h2>Favorites</h2>
         <div>
             <b>Food:</b> <span>lamb chops</span><br>
+            <b>Color:</b> <b id="fcolor">#FF0077</b><br>
             <b>Animal:</b> Rabbits<br>
             <figure>
                 <picture><img src="Images/whiteRabbit.jpg" alt="Mini Lop Rabbit"></picture>
