Update index file

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Ivan Luu</title>
     </head>
+    <style>
+        nav a {color:#ffb8d9;}
+      </style>
     <body>
         <header id="name">
-            <h1>Ivan Luu</h1>
+            <h1 style="color: #ffb8d9">Ivan Luu</h1>
         </header>
         <nav>
             <a href="#who">Who</a>
@@ -46,8 +49,8 @@
         </main>
         <h2>Favorites</h2>
         <div>
-            <b>Food:</b> <span>lamb chops</span><br>
-            <b>Color:</b> <b id="fcolor">#FF0077</b><br>
+            <b>Food:</b> <span>Lamb chops</span><br>
+            <b>Color:</b> <p id="fcolor">#FF0077</p><br>
             <b>Animal:</b> Rabbits<br>
             <figure>
                 <picture><img src="Images/whiteRabbit.jpg" alt="Mini Lop Rabbit"></picture>
@@ -66,6 +69,7 @@
             </ol>
             <video controls><source src="Media/bladeRunnerTrailer.mp4" type="video/mp4"></video><br>
             <b>Programming Language:</b> <em>Java</em> because <code>malloc(), calloc(), free() and realloc()</code> have scarred me for life.<br><br>
+            <b>Quote:</b> <p id="quote">"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</p>
         </div>
         <h2 id="schedule">Schedule</h2>
         <table>
@@ -116,7 +120,6 @@
             </tr>
         </table><br>
         <h2 id="misc">Misc</h2>
-        <aside>"Straight roads are for fast cars, turns are for fast drivers." - Colin McRae</aside>
         <pre>
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
 ⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿⣿
